# 2025-26_DL_Assignments

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
0assign/: test.py
1assign/: assignment1.ipynb  assignment1.py  explicaciones.txt
2assign/: main.py  scratch.py
2assign/models/: scratch.py  vgg.py
2assign/temporary/: cifar10_models.py  plots.py  train_part2.py
2assign/utils/: plots.py
3assign/: main.py
3assign/data/: dataset.py
3assign/language/: lan_model.py
3assign/models/: lstm.py
3assign/tasks/: language.py
3assign/timeSeries/: TS_model.py  baseline_pipeline.py
3assign/utils/: eda.py  plots.py
